--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,11 +6,11 @@ provisioner:
   name: chef_zero
 
 platforms:
-#  - name: ubuntu-14.04
-#  - name: ubuntu-12.04
+  - name: ubuntu-14.04
+  - name: ubuntu-12.04
   - name: centos-7.1
-#  - name: centos-6.7
-#  - name: centos-5.8
+  - name: centos-6.7
+  - name: centos-5.8
 
 suites:
   - name: default
